Fixed spacing issue Grids

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,13 @@
     margin-top: 70px;
     margin-left: 55px;
     transition: margin-left 0.3s ease;
+    padding: 10px;
 }
 
 @media screen and (min-width: 768px) {
+    #content {
+        padding: 20px;
+    }
     #content.open {
         margin-left: 250px;
         transition: margin-left 0.3s ease;
